--- a/package.json
+++ b/package.json
@@ -7,54 +7,53 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint **/*.tsx --fix",
-    "test": "test --watch",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "format": "prettier --write src",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/open-sans": "^5.0.5",
     "@mui/material": "^5.14.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "classnames": "^2.3.2",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.64.1",
     "typescript": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.9",
-    "@babel/preset-flow": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
-    "@storybook/addon-controls": "^7.1.1",
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.1.1",
-    "@storybook/addon-links": "^7.1.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.1.1",
-    "@storybook/nextjs": "^7.1.1",
-    "@storybook/react": "^7.1.1",
-    "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/enzyme": "^3.10.13",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "babel-jest": "^29.6.1",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-react-app": "^10.0.1",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
+    "enzyme-to-json": "^3.6.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "prettier": "^3.0.0",
-    "storybook": "^7.1.1"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
