--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.5",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "sass": "^1.64.1",
     "typescript": "*"
   },
@@ -52,6 +57,7 @@
     "eslint-plugin-react": "^7.33.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "jsdom-global": "^3.0.2",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
