--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -25,10 +26,12 @@
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "next-redux-wrapper": "^8.1.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.1",
     "sass": "^1.64.1",
     "typescript": "*"
   },
