--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint **/*.tsx --fix",
     "format": "prettier --write src",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "json-server": "json-server --watch src/mocks/db.json --port 5000"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
