--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "babel-jest": "^29.6.1",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
     "enzyme-to-json": "^3.6.2",
@@ -58,7 +59,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.0",
     "jest": "^29.6.1",
+    "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.6.1",
+    "jest-transform-stub": "^2.0.0",
+    "jsdom": "^22.1.0",
     "jsdom-global": "^3.0.2",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
