--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "babel-jest": "^29.6.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
@@ -64,6 +65,7 @@
     "jest-transform-stub": "^2.0.0",
     "jsdom": "^22.1.0",
     "jsdom-global": "^3.0.2",
+    "next-router-mock": "^0.9.7",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
