--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.3.2",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
     "next": "13.4.12",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
